# PEBBLE

./: .gitignore  Cargo.toml  LICENSE  README.md
.roles/: ROLE.md
.roles/parliament/: compactness-reviewer.md  integration-reviewer.md  schema-steward.md
context/waves/2026-05-16-slice-examples/: WAVE.md
context/waves/2026-05-16-slice-examples/pulses/: pulse-01.md
docs/research/: performance.md
docs/specs/: slice-selectors.md
src/: lib.rs
tests/: slice_metadata_selector.rs
