[package]
name = "pebble"
version = "0.1.0"
edition = "2021"
description = "Pebble v1 compact context transfer format for PROOF, CROP, and AI agents."
license = "MIT"
repository = "https://github.com/giodl73-repo/PEBBLE"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
slice-core = { git = "https://github.com/giodl73-repo/SLICE", package = "slice-core", rev = "4b51cc4371d5773fd37864206759ad2e8b323725" }
